# aunisoma

./: .gitignore  README.md  build.gradle.kts  generate_script.sh  settings.gradle.kts
arduino/: code.cpp  compare_to_arduino_sketch.sh  copy_to_arduino_sketch.sh
arduino/Aunisoma-Sketch/: Aunisoma-Sketch.ino  Aunisoma.cpp  Aunisoma.h  Clock.cpp  Clock.h  Color.h  ColorManager.cpp  ColorManager.h  Config.cpp  Config.h  Cycle.cpp  Debounce.h  DistributedPanelAnimation.cpp  Gradient.cpp  Gradient.h  (+17 more)
arduino/src/: Adafruit_DotStar.h  Arduino.cpp  Arduino.h  Aunisoma-Sketch.h  Aunisoma.cpp  Aunisoma.h  CMakeLists.txt  Clock.h  Color.cpp  Color.h  ColorManager.cpp  ColorManager.h  Config.h  Cycle.cpp  Cycle.h  Debounce.cpp  Debounce.h  DistributedPanelAnimation.cpp  DistributedPanelAnimation.h  Gradient.cpp  Gradient.h  Interaction.cpp  Interaction.h  Interpolation.cpp  Interpolation.h  Maths.h  MaxInteractionAnimation.cpp  MaxInteractionAnimation.h  Panel.h  PanelContext.h  PanelReverberation.cpp  Pulse.cpp  Range.cpp  Range.h  Reverberation.cpp  Reverberation.h  SPI.h  Sensor.cpp  Sensor.h  Timer.cpp  (+7 more)
docs/: index.html  python-index.html  script-index.html  v2.html
python/: assembly.py  aunisoma_server.py  clock.py  clock_test.py  code.py  color.py  console.sh  cycle.py  cycle_test.py  gradient.py  gradient_test.py  headless.py  install.sh  interaction.py  main.py  max_interaction_animation.py  mock_test_utils.py  panel.py  panel_context.py  panel_reverberation.py  panel_reverberation_test.py  panel_test.py  random_utils.py  range.py  scripts.py  transition_animation.py
(+42 files in other folders)
